--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ option(MATERIALX_BUILD_GEN_OGSXML "Build the OGSXML shader generator back-end." 
 option(MATERIALX_BUILD_GEN_OGSFX "Build the OGSFX shader generator back-end." ON)
 option(MATERIALX_BUILD_GEN_ARNOLD "Build the Arnold OSL shader generator back-end." ON)
 
+option(MATERIALX_BUILD_WASM "Build the MaterialX WASM package from C++ bindings." OFF)
 option(MATERIALX_BUILD_PYTHON "Build the MaterialX Python package from C++ bindings. Requires Python 2.7 or greater." OFF)
 option(MATERIALX_BUILD_RUNTIME "Build the MaterialX Runtime data model library." OFF)
 option(MATERIALX_BUILD_RENDER "Build the MaterialX Render modules." ON)
@@ -43,6 +44,12 @@ option(MATERIALX_BUILD_TESTS "Build unit tests." ON)
 if (NOT MATERIALX_BUILD_PYTHON)
     set(MATERIALX_PYTHON_LTO OFF)
     set(MATERIALX_INSTALL_PYTHON OFF)
+endif()
+
+if(MATERIALX_BUILD_WASM)
+    message("MATERIALX_BUILD_WASM turned on.")
+    set(MATERIALX_BUILD_RENDER OFF)
+    set(MATERIALX_BUILD_TESTS OFF)
 endif()
 
 if (MATERIALX_BUILD_RENDER)
@@ -265,6 +272,10 @@ endif()
 if(MATERIALX_BUILD_PYTHON)
     add_subdirectory(source/PyMaterialX)
     add_subdirectory(python)
+endif()
+
+if(MATERIALX_BUILD_WASM)
+    add_subdirectory(source/JsMaterialX)
 endif()
 
 if(MATERIALX_BUILD_DOCS)
